<resources>
    <string translatable="false" name="app_name"></string>
    <string translatable="false" name="default_notification_channel_id">new_plants</string>
    <string translatable="false" name="cof_white">white</string>
    <string translatable="false" name="cof_yellow">yellow</string>
    <string translatable="false" name="cof_red">red</string>
    <string translatable="false" name="cof_blue">blue</string>
    <string translatable="false" name="cof_green">green</string>
    <string translatable="false" name="ph_meadows">meadows or grassland</string>
    <string translatable="false" name="ph_gardens">gardens or fields</string>
    <string translatable="false" name="ph_moorlands">moorlands or wetlands</string>
    <string translatable="false" name="ph_woodlands">woodlands or forests</string>
    <string translatable="false" name="ph_rocks">rocks or mountains</string>
    <string translatable="false" name="ph_trees">trees or bushes</string>
    <string translatable="false" name="nop_4">4 or less</string>
    <string translatable="false" name="nop_5">5</string>
    <string translatable="false" name="nop_many">Many</string>
    <string translatable="false" name="nop_bisymmetric">Bisymetric</string>
    <string translatable="false" name="wgsrpd_10">10</string>
    <string translatable="false" name="wgsrpd_11">11</string>
    <string translatable="false" name="wgsrpd_12">12</string>
    <string translatable="false" name="wgsrpd_13">13</string>
    <string translatable="false" name="wgsrpd_14">14</string>
    <string translatable="false" name="wgsrpd_20">20</string>
    <string translatable="false" name="wgsrpd_21">21</string>
    <string translatable="false" name="wgsrpd_22">22</string>
    <string translatable="false" name="wgsrpd_23">23</string>
    <string translatable="false" name="wgsrpd_24">24</string>
    <string translatable="false" name="wgsrpd_25">25</string>
    <string translatable="false" name="wgsrpd_26">26</string>
    <string translatable="false" name="wgsrpd_27">27</string>
    <string translatable="false" name="wgsrpd_28">28</string>
    <string translatable="false" name="wgsrpd_29">29</string>
    <string translatable="false" name="wgsrpd_30">30</string>
    <string translatable="false" name="wgsrpd_31">31</string>
    <string translatable="false" name="wgsrpd_32">32</string>
    <string translatable="false" name="wgsrpd_33">33</string>
    <string translatable="false" name="wgsrpd_34">34</string>
    <string translatable="false" name="wgsrpd_35">35</string>
    <string translatable="false" name="wgsrpd_36">36</string>
    <string translatable="false" name="wgsrpd_37">37</string>
    <string translatable="false" name="wgsrpd_38">38</string>
    <string translatable="false" name="wgsrpd_40">40</string>
    <string translatable="false" name="wgsrpd_41">41</string>
    <string translatable="false" name="wgsrpd_42">42</string>
    <string translatable="false" name="wgsrpd_43">43</string>
    <string translatable="false" name="wgsrpd_50">50</string>
    <string translatable="false" name="wgsrpd_51">51</string>
    <string translatable="false" name="wgsrpd_60">60</string>
    <string translatable="false" name="wgsrpd_61">61</string>
    <string translatable="false" name="wgsrpd_62">62</string>
    <string translatable="false" name="wgsrpd_63">63</string>
    <string translatable="false" name="wgsrpd_70">70</string>
    <string translatable="false" name="wgsrpd_71">71</string>
    <string translatable="false" name="wgsrpd_72">72</string>
    <string translatable="false" name="wgsrpd_73">73</string>
    <string translatable="false" name="wgsrpd_74">74</string>
    <string translatable="false" name="wgsrpd_75">75</string>
    <string translatable="false" name="wgsrpd_76">76</string>
    <string translatable="false" name="wgsrpd_77">77</string>
    <string translatable="false" name="wgsrpd_78">78</string>
    <string translatable="false" name="wgsrpd_79">79</string>
    <string translatable="false" name="wgsrpd_80">80</string>
    <string translatable="false" name="wgsrpd_81">81</string>
    <string translatable="false" name="wgsrpd_82">82</string>
    <string translatable="false" name="wgsrpd_83">83</string>
    <string translatable="false" name="wgsrpd_84">84</string>
    <string translatable="false" name="wgsrpd_85">85</string>
    <string translatable="false" name="wgsrpd_90">90</string>
    <string translatable="false" name="wgsrpd_91">91</string>
    <string translatable="false" name="agpiii">APG III</string>
    <string translatable="false" name="agpiv">APG IV</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback / Contribution</string>
    <string name="pref_language">Preferred language</string>
    <string name="cache_size">Cache size in MB</string>
    <string name="cache_size_summary">for photos and illustrations</string>
    <string name="color_of_flower">color of flowers</string>
    <string name="color_white">white</string>
    <string name="color_yellow">yellow</string>
    <string name="color_red">red, pink</string>
    <string name="color_blue">blue, purple</string>
    <string name="color_green">green, brown, black</string>
    <string name="color_of_flower_message">What\'s the color of the flower? Choose the closest one.</string>
    <string name="habitats">habitats</string>
    <string name="habitat_meadow">meadows or grasslands</string>
    <string name="habitat_garden">gardens or fields</string>
    <string name="habitat_wetland">moorlands or wetlands</string>
    <string name="habitat_forest">woodlands or forests</string>
    <string name="habitat_rock">rocks or mountains</string>
    <string name="habitat_tree">trees or shrubs</string>
    <string name="habitat_message">What\'s around you? Identify plant\'s habitat.</string>
    <string name="number_of_petals">number of petals</string>
    <string name="petal_4">4 or less</string>
    <string name="petal_5">5</string>
    <string name="petal_many">more than 5</string>
    <string name="petal_bisymmetric">bisymmetric</string>
    <string name="number_of_petals_message">Is the flower bisymmetric? No? Then how many petals does it have?</string>
    <string name="display_info">Right one?</string>
    <string name="list_info">Pick one</string>
    <string name="plant_info">Info</string>
    <string name="plant_gallery">Gallery</string>
    <string name="plant_taxonomy">Taxonomy</string>
    <string name="plant_sources">Sources</string>
    <string name="image_desc">Plant illustration</string>
    <string name="translate_desc">Translate</string>
    <string name="email_desc">Email</string>
    <string name="email_subject_prefix">Suggestion for better translation / description of </string>
    <string name="plant_title">observationDate</string>
    <string name="plant_height_from">Height from</string>
    <string name="plant_height_to">to</string>
    <string name="plant_flowering_from">Flowering from</string>
    <string name="plant_flowering_to">to</string>
    <string name="plant_flowers">Flowers</string>
    <string name="plant_inflorescences">Inflorescence</string>
    <string name="plant_fruits">Fruits</string>
    <string name="plant_leaves">Leaves</string>
    <string name="plant_inflorescence">Inflorescence</string>
    <string name="plant_color_of_flowers">Color of flowers</string>
    <string name="plant_number_of_petals">Number of petals</string>
    <string name="plant_sepal">Sepal</string>
    <string name="plant_leaf_shape">Leaf shape</string>
    <string name="plant_leaf_margin">Leaf margin</string>
    <string name="plant_leaf_venation">Leaf venation</string>
    <string name="plant_leaf_arrangement">Leaf arrangement</string>
    <string name="plant_stem">Stem</string>
    <string name="plant_root">Root</string>
    <string name="plant_habitat">Habitat</string>
    <string name="plant_trivia">Trivia</string>
    <string name="plant_toxicity">Toxicity</string>
    <string name="plant_herbalism">Herbalism</string>
    <string name="taxonomy_superregnum">Domain</string>
    <string name="taxonomy_regnum">Kingdom</string>
    <string name="taxonomy_cladus">(clade)</string>
    <string name="taxonomy_ordo">Order</string>
    <string name="taxonomy_familia">Family</string>
    <string name="taxonomy_subfamilia">Subfamily</string>
    <string name="taxonomy_tribus">Tribe</string>
    <string name="taxonomy_subtribus">Subtribe</string>
    <string name="taxonomy_genus">Genus</string>
    <string name="taxonomy_subgenus">Subgenus</string>
    <string name="taxonomy_supersectio">Supersectio</string>
    <string name="taxonomy_sectio">Sectio</string>
    <string name="taxonomy_subsectio">Subsectio</string>
    <string name="taxonomy_serie">Serie</string>
    <string name="taxonomy_subserie">Subserie</string>
    <string name="taxonomy_species">Species</string>
    <string name="close">Close</string>
    <string name="showcase_fullscreen_title">Larger illustration</string>
    <string name="showcase_fullscreen_message">You can display illustration on full screen by clicking on it.</string>
    <string name="showcase_count_button_title">Number of filtered plants</string>
    <string name="showcase_count_button_message">Press to jump directly to the list. Long press to clear filter.</string>
    <string name="showcase_taxonomy_title">Taxonomy according to APG III system</string>
    <string name="showcase_taxonomy_message">You can show / hide flower\'s taxonomy by clicking on the its name.</string>
    <string name="legend">Legend</string>
    <string name="toxicity1">poisonous plant</string>
    <string name="toxicity2">slightly poisonous plant</string>
    <string name="rate_question">Is this app helpful?</string>
    <string name="rate_text">Author of this application is fueled by positive response from the users. Please send him some starflowers through Google Play Store.</string>
    <string name="rate_never">Never</string>
    <string name="rate_later">Later</string>
    <string name="rate">Review</string>
    <string name="your_text">your text</string>
    <string name="google_translate">Translated with Google Translate</string>
    <string name="show_original">Show English text</string>
    <string name="improve_translation">Improve translation</string>
    <string name="show_translation">Show translated text</string>
    <string name="feedback_intro">You have been contributing to this application since you have installed it on your device, thanks. If you are looking for something more, here are some options:</string>
    <string name="feedback_review">You can write a positive review in Google Play.</string>
    <string name="feedback_google_play">Google Play</string>
    <string name="feedback_title">How to contribute</string>
    <string name="feedback_translate">You can report any typo or mistranslation you found or submit new translation for flower\'s data or application\'s labels at whatsthatflower.com.</string>
    <string name="feedback_cash">You can support new development and database extension with cash.</string>
    <string name="feedback_submit_cash">Donate</string>
    <string name="subscribed_to_new">Subscribed.</string>
    <string name="unsubscribed_to_new">Unsubscribed.</string>
    <string name="subscribe_to_new">Interesting facts about flowers</string>
    <string name="subscribe_to_new_summary">Subscribe to occasional interesting fact about certain flower.</string>
    <string name="taxonomy_unknown">unknown</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update_version">Update version</string>
    <string name="new_version_available">New version is available, please update.</string>
    <string name="update">Update</string>
    <string name="feedback_submit_translate_data">Improve flower\'s data</string>
</resources>