<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <sk.ab.herbsbase.commons.BaseImageButton
        android:id="@+id/ibMeadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/meadow"
        android:text="@string/habitat_meadow"
        android:textColor="@color/MenuWhite"
        android:textStyle="bold"
        android:textSize="18sp"
        custom:value="@string/ph_meadows"/>

    <sk.ab.herbsbase.commons.BaseImageButton
        android:id="@+id/ibGarden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/garden"
        android:text="@string/habitat_garden"
        android:textColor="@color/MenuWhite"
        android:textStyle="bold"
        android:textSize="18sp"
        custom:value="@string/ph_gardens"/>

    <sk.ab.herbsbase.commons.BaseImageButton
        android:id="@+id/ibWetland"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/swamp"
        android:text="@string/habitat_wetland"
        android:textColor="@color/MenuWhite"
        android:textStyle="bold"
        android:textSize="18sp"
        custom:value="@string/ph_moorlands"/>

    <sk.ab.herbsbase.commons.BaseImageButton
        android:id="@+id/ibForest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/forest"
        android:text="@string/habitat_forest"
        android:textColor="@color/MenuWhite"
        android:textStyle="bold"
        android:textSize="18sp"
        custom:value="@string/ph_woodlands"/>

    <sk.ab.herbsbase.commons.BaseImageButton
        android:id="@+id/ibRock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/mountain"
        android:text="@string/habitat_rock"
        android:textColor="@color/MenuWhite"
        android:textStyle="bold"
        android:textSize="18sp"
        custom:value="@string/ph_rocks"/>

    <sk.ab.herbsbase.commons.BaseImageButton
        android:id="@+id/ibTree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:background="@drawable/tree"
        android:text="@string/habitat_tree"
        android:textColor="@color/MenuWhite"
        android:textStyle="bold"
        android:textSize="18sp"
        custom:value="@string/ph_trees"/>

    <TextView
        android:id="@+id/filter_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:lines="2"
        android:text="@string/habitat_message"
        android:textSize="16sp"
        android:textStyle="italic">

    </TextView>
</LinearLayout>