<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <uk.co.deanwild.flowtextview.FlowTextView
        android:id="@+id/plantInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/CardsForeground"
        android:padding="@dimen/list_padding">

        <ImageView
            android:id="@+id/plant_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/image_desc"
            android:paddingBottom="@dimen/list_padding"
            android:paddingTop="@dimen/list_padding"
            android:scaleType="fitStart"/>

    </uk.co.deanwild.flowtextview.FlowTextView>

    <LinearLayout
        android:id="@+id/translation_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/note_padding"
        android:background="@color/CardsBackground"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/CardSubTitle"
            android:textStyle="italic"
            android:gravity="center"
            android:text="@string/google_translate"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/show_original"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/CardSubTitle"
                android:text="@string/show_original"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/improve_translation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/CardSubTitle"
                android:text="@string/improve_translation"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/bottomInfo"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/plantInfoLayout"
        android:background="@drawable/list_item_shadow_bottom"/>
</LinearLayout>
